Fixed grid height issues on iOS

--- a/client/scss/games.scss
+++ b/client/scss/games.scss
@@ -463,6 +463,7 @@
 							}
 						}
 						.details {
+							height: 20pt;
 							.title {
 								display: none;
 							}
@@ -507,7 +508,6 @@
 				display: flex;
 				flex-wrap: wrap;
 				& > * {
-					flex-basis: 0;
 					flex-grow: 1;
 				}
 				.teams {
@@ -520,6 +520,9 @@
 					}
 				}
 				@media #{$desktop-and-tablet} {
+					& > * {
+						flex-basis: 0;
+					}
 					.teams {
 						flex-direction: column;
 						.team {
