--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -70,7 +70,7 @@ header {
 
 		a {
 			display: flex;
-			align-content: center;
+			align-items: center;
 			justify-content: center;
 
 			.main-header-logo {
